docs/7.55/md/abenddic_database_tables_semasspec.md
---
title: "DDIC - Table-Specific Semantic Attributes of Database Tables"
description: |
  The following semantic attributes are provided specifically for DDIC database tables. -   Key fields(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_key.htm) -   Client dependency(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tab
version: "7.55"
category: "database"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_semasspec.htm"
abapFile: "abenddic_database_tables_semasspec.htm"
keywords: ["do", "if", "class", "data", "abenddic", "database", "tables", "semasspec"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP - Dictionary (DDIC)](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_dictionary.htm) →  [DDIC - Database Tables](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables.htm) →  [DDIC - Semantic Attributes of Database Tables](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_sema.htm) → 

DDIC - Table-Specific Semantic Attributes of Database Tables

The following semantic attributes are provided specifically for DDIC database tables.

-   [Key fields](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_key.htm)

-   [Client dependency](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_client.htm)

-   [Foreign key dependencies](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_forkey.htm)

-   [Spatial reference system](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_sptlrf.htm)

-   [Flag for initial value](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_init.htm)

-   [Delivery class](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_delivery.htm)

-   [Secondary indexes](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_index.htm)

-   [Display and Maintenance](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_maint.htm)

Continue
[DDIC - Key Fields of Database Tables](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_key.htm)
[DDIC - Client Dependency of Database Tables](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_client.htm)
[DDIC - Flag for Initial Values in Database Tables](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_init.htm)
[DDIC - Foreign Key Dependencies](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_forkeyrel.htm)
[DDIC - Spatial Reference System](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_sptlrf.htm)
[DDIC - Delivery Class of Database Tables](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_delivery.htm)
[DDIC - Indexes in Database Tables](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_index.htm)
[DDIC - Display and Maintenance of Database Tables](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenddic_database_tables_maint.htm)